Add mybatis code in it

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,3 +17,7 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialec
 # Hibernate ddl auto (create, create-drop, validate, update)
 spring.jpa.hibernate.ddl-auto = update
 spring.jpa.generate-ddl=true
+
+#spring.datasource.testWhileIdle=true
+#spring.datasource.validationQuery=SELECT 1
+
