--- a/pom.xml
+++ b/pom.xml
@@ -17,8 +17,8 @@
 	<description>Rabbitmq</description>
 
 	<properties>
-		 <java.version>1.8</java.version>
-        <maven-jar-plugin.version>3.1.1</maven-jar-plugin.version>
+		<java.version>1.8</java.version>
+		<!-- <maven-jar-plugin.version>3.1.1</maven-jar-plugin.version> -->
 	</properties>
 
 	<dependencies>
@@ -28,12 +28,18 @@
 		</dependency>
 
 		<dependency>
+			<groupId>org.mybatis.spring.boot</groupId>
+			<artifactId>mybatis-spring-boot-starter</artifactId>
+			<version>1.3.0</version>
+		</dependency>
+
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-devtools</artifactId>
 			<scope>runtime</scope>
 			<optional>true</optional>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-actuator</artifactId>
@@ -43,7 +49,7 @@
 			<artifactId>amqp-client</artifactId>
 		</dependency>
 
-	
+
 		<!-- <dependency> <groupId>org.springframework.boot</groupId> <artifactId>spring-boot-starter-test</artifactId> 
 			<scope>test</scope> </dependency> <dependency> <groupId>org.springframework.security</groupId> 
 			<artifactId>spring-security-test</artifactId> <scope>test</scope> </dependency> -->
@@ -110,4 +116,5 @@
 		</plugins>
 	</build>
 
+	<packaging>war</packaging>
 </project>
